--- a/po/da.po
+++ b/po/da.po
@@ -45,7 +45,7 @@ msgid ""
 msgstr "'Hotspots' viser den midlertidige indflydelsen på ydelsen kun for de tråde som er involveret i beslutninger om underoptimale SMT-planlægninger."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Egenskaber til CPU-graf"
 
 #: ../panel-plugin/properties.cc:108
@@ -264,5 +264,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT registreret: —"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "CPU-graf"
