--- a/po/pa.po
+++ b/po/pa.po
@@ -32,7 +32,7 @@ msgid "Usage: %u%%"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:132
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:149
@@ -174,5 +174,5 @@ msgid "Color mode: "
 msgstr "ਰੰਗ ਮੋਡ: "
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "CPU ਗਰਾਫ਼"
