--- a/po/ca.po
+++ b/po/ca.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Propietats de la gràfica de la CPU"
 
 #: ../panel-plugin/properties.cc:108
@@ -265,5 +265,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT detectat: n.d."
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Gràfica de la CPU"
