--- a/po/cs.po
+++ b/po/cs.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr "Sekce „Aktivní oblasti“ zobrazuje aktuální vliv na výkon pouze ve vláknech využívajících neoptimální rozhodnutí v plánování SMT."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Vlastnosti Grafu procesoru"
 
 #: ../panel-plugin/properties.cc:108
@@ -264,5 +264,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT rozpoznáno: Výsledek není k dispozici"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Graf procesoru"
