--- a/po/el.po
+++ b/po/el.po
@@ -44,7 +44,7 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Ιδιότητες Γραφήματος CPU"
 
 #: ../panel-plugin/properties.cc:108
@@ -263,5 +263,5 @@ msgid "SMT detected: N/A"
 msgstr ""
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Γράφημα CPU"
