--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -44,8 +44,8 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
-msgstr "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
+msgstr "CPU Heatmap Properties"
 
 #: ../panel-plugin/properties.cc:108
 msgid "_Close"
@@ -263,5 +263,5 @@ msgid "SMT detected: N/A"
 msgstr ""
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
-msgstr "CPU Graph"
+msgid "CPU Heatmap"
+msgstr "CPU Heatmap"
