--- a/po/eu.po
+++ b/po/eu.po
@@ -45,7 +45,7 @@ msgid ""
 msgstr "'Sartze-puntuak' une bateko errendimendu eragina erakusten ari da SMT programazio erabaki azpi-optimoetan sartutako harietan soilik."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "CPU grafiko propietateak"
 
 #: ../panel-plugin/properties.cc:108
@@ -264,5 +264,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT antzemanda: E/E"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "CPU Grafikoa"
