--- a/po/fr.po
+++ b/po/fr.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr "« Hotspots » montre uniquement l'impact momentané des performances sur les threads impliqués dans les décisions de planification SMT sous-optimales."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Propriétés du graphique processeur"
 
 #: ../panel-plugin/properties.cc:108
@@ -265,5 +265,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT détecté : N/A"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Graphique processeur"
