--- a/po/id.po
+++ b/po/id.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr "'Titik Panas' menampilkan dampak performa sesaat pada hanya ulir yang terlibat di keputusan penjadwalan SMT yang suboptimal."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Properti Grafik CPU"
 
 #: ../panel-plugin/properties.cc:108
@@ -261,5 +261,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT terdeteksi: Tidak ada"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Grafik CPU"
