--- a/po/it.po
+++ b/po/it.po
@@ -23,7 +23,7 @@ msgstr ""
 
 #: ../panel-plugin/cpu.cc:167 ../panel-plugin/cpuheatmap.desktop.in.h:2
 msgid "Graphical representation of the CPU load"
-msgstr "Rappresentazione grafica del carico della CPU"
+msgstr "Rappresentazione heatmap del carico CPU"
 
 #: ../panel-plugin/cpu.cc:169
 msgid "Copyright (c) 2003-2021\n"
@@ -46,8 +46,8 @@ msgid ""
 msgstr "'Ristretto' mostra l'impatto momentaneo sulle prestazioni solo nei thread coinvolti nello schedulamento subottimale SMT."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
-msgstr "Proprietà del grafico della CPU"
+msgid "CPU Heatmap Properties"
+msgstr "Proprietà del grafico heatmap della CPU"
 
 #: ../panel-plugin/properties.cc:108
 msgid "_Close"
@@ -269,5 +269,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT rilevato: N/D"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
-msgstr "Grafico CPU"
+msgid "CPU Heatmap"
+msgstr "Heatmap carico CPU"
