--- a/po/lt.po
+++ b/po/lt.po
@@ -44,7 +44,7 @@ msgid ""
 msgstr "„Karštieji taškai“ rodo momentinį našumo poveikį gijoms, įtrauktoms į suboptimaliojo SMT planavimo sprendimus."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Procesoriaus grafiko savybės"
 
 #: ../panel-plugin/properties.cc:108
@@ -265,5 +265,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT aptikta: Nepasiekiama"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Procesoriaus grafikas"
