--- a/po/lv.po
+++ b/po/lv.po
@@ -33,7 +33,7 @@ msgid "Usage: %u%%"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:132
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:149
@@ -176,5 +176,5 @@ msgid "Color mode: "
 msgstr "Krāsu režīms: "
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "CPU grafs"
