--- a/po/ms.po
+++ b/po/ms.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr "'Kawasan Khas\" menunjukkan impak prestasi sementara hanya pada jaluran yang terlibat dalam keputusan penjadualan SMT suboptimum."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Sifat Graf CPU"
 
 #: ../panel-plugin/properties.cc:108
@@ -261,5 +261,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT dikesan: T/A"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Graf CPU"
