--- a/po/oc.po
+++ b/po/oc.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Proprietats del grafic processor"
 
 #: ../panel-plugin/properties.cc:108
@@ -262,5 +262,5 @@ msgid "SMT detected: N/A"
 msgstr ""
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Grafic processor"
