--- a/po/pl.po
+++ b/po/pl.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr "'Hotspoty' pokazują chwilowy wpływ wydajności tylko na wątki zaangażowane w nieoptymalne decyzje dotyczące planowania SMT."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Monitor użycia CPU"
 
 #: ../panel-plugin/properties.cc:108
@@ -267,5 +267,5 @@ msgid "SMT detected: N/A"
 msgstr "Wykryto SMT: nie dotyczy"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Monitor użycia CPU"
