--- a/po/ro.po
+++ b/po/ro.po
@@ -32,7 +32,7 @@ msgid "Usage: %u%%"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:132
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr ""
 
 #: ../panel-plugin/properties.cc:149
@@ -175,5 +175,5 @@ msgid "Color mode: "
 msgstr "Mod de colorare:"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Grafic CPU"
