--- a/po/sr.po
+++ b/po/sr.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr "„Вруће тачке“ приказују тренутни дејствени учинак на само потке укључене у несавршене заказане одлуке СМТ-а."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Својства приказа процесора"
 
 #: ../panel-plugin/properties.cc:108
@@ -263,5 +263,5 @@ msgid "SMT detected: N/A"
 msgstr "СМТ је препознат: Нема"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Цртеж процесора"
