--- a/po/sv.po
+++ b/po/sv.po
@@ -46,7 +46,7 @@ msgid ""
 msgstr "\"Hotspots\" visar den tillfälliga påverkan på tjänsten endast för de trådar som är involverade i suboptimala SMT-planeringsbeslut"
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "Egenskaper för processorgraf"
 
 #: ../panel-plugin/properties.cc:108
@@ -265,5 +265,5 @@ msgid "SMT detected: N/A"
 msgstr "SMT upptäcktes: N/A"
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "Processordiagram"
