--- a/po/ug.po
+++ b/po/ug.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Graph Properties"
+msgid "CPU Heatmap Properties"
 msgstr "س پ ئۇ(CPU) گرافىك خاسلىقىCPU گرافىك خاسلىقى"
 
 #: ../panel-plugin/properties.cc:108
@@ -261,5 +261,5 @@ msgid "SMT detected: N/A"
 msgstr ""
 
 #: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Graph"
+msgid "CPU Heatmap"
 msgstr "س پ ئۇ(CPU) گرافىكى"
