--- a/po/hye.po
+++ b/po/hye.po
@@ -18,15 +18,15 @@ msgstr ""
 "Language: hye\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../panel-plugin/heatmap.cc:167 ../panel-plugin/cpuheatmap.desktop.in.h:2
+#: ../panel-plugin/waterfall.cc:167 ../panel-plugin/cpuwaterfall.desktop.in.h:2
 msgid "Graphical representation of the CPU load"
 msgstr "ԿՄՍ֊ի բեռնման գծապատկերային ներկայացում"
 
-#: ../panel-plugin/heatmap.cc:169
+#: ../panel-plugin/waterfall.cc:169
 msgid "Copyright (c) 2003-2021\n"
 msgstr ""
 
-#: ../panel-plugin/heatmap.cc:642
+#: ../panel-plugin/waterfall.cc:642
 #, c-format
 msgid "Usage: %u%%"
 msgstr "Աւգտագործում․ %u%%"
@@ -43,8 +43,8 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Heatmap Properties"
-msgstr "CPU Heatmap Յատկութիւններ"
+msgid "CPU Waterfall Properties"
+msgstr "CPU Waterfall Յատկութիւններ"
 
 #: ../panel-plugin/properties.cc:108
 msgid "_Close"
@@ -261,6 +261,6 @@ msgstr ""
 msgid "SMT detected: N/A"
 msgstr ""
 
-#: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Heatmap"
-msgstr "CPU Heatmap"
+#: ../panel-plugin/cpuwaterfall.desktop.in.h:1
+msgid "CPU Waterfall"
+msgstr "CPU Waterfall"
