--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -19,15 +19,15 @@ msgstr ""
 "Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../panel-plugin/heatmap.cc:167 ../panel-plugin/cpuheatmap.desktop.in.h:2
+#: ../panel-plugin/waterfall.cc:167 ../panel-plugin/cpuwaterfall.desktop.in.h:2
 msgid "Graphical representation of the CPU load"
 msgstr "Graphical representation of the CPU load"
 
-#: ../panel-plugin/heatmap.cc:169
+#: ../panel-plugin/waterfall.cc:169
 msgid "Copyright (c) 2003-2021\n"
 msgstr ""
 
-#: ../panel-plugin/heatmap.cc:642
+#: ../panel-plugin/waterfall.cc:642
 #, c-format
 msgid "Usage: %u%%"
 msgstr "Usage: %u%%"
@@ -44,8 +44,8 @@ msgid ""
 msgstr ""
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Heatmap Properties"
-msgstr "CPU Heatmap Properties"
+msgid "CPU Waterfall Properties"
+msgstr "CPU Waterfall Properties"
 
 #: ../panel-plugin/properties.cc:108
 msgid "_Close"
@@ -262,6 +262,6 @@ msgstr ""
 msgid "SMT detected: N/A"
 msgstr ""
 
-#: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Heatmap"
-msgstr "CPU Heatmap"
+#: ../panel-plugin/cpuwaterfall.desktop.in.h:1
+msgid "CPU Waterfall"
+msgstr "CPU Waterfall"
