--- a/po/nl.po
+++ b/po/nl.po
@@ -18,15 +18,15 @@ msgstr ""
 "Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: ../panel-plugin/heatmap.cc:167 ../panel-plugin/cpuheatmap.desktop.in.h:2
+#: ../panel-plugin/waterfall.cc:167 ../panel-plugin/cpuwaterfall.desktop.in.h:2
 msgid "Graphical representation of the CPU load"
 msgstr "Grafische weergave van de processorbelasting"
 
-#: ../panel-plugin/heatmap.cc:169
+#: ../panel-plugin/waterfall.cc:169
 msgid "Copyright (c) 2003-2021\n"
 msgstr "Auteursrecht (c) 2003-2021\n"
 
-#: ../panel-plugin/heatmap.cc:642
+#: ../panel-plugin/waterfall.cc:642
 #, c-format
 msgid "Usage: %u%%"
 msgstr "Gebruik: %u%%"
@@ -43,8 +43,8 @@ msgid ""
 msgstr "'Brandpunten' toont het tijdelijke prestatie-effect op uitsluitend die draden die betrokken zijn bij niet-optimale SMT-inroosteringsbesluiten."
 
 #: ../panel-plugin/properties.cc:104
-msgid "CPU Heatmap Properties"
-msgstr "Eigenschappen van CPU Heatmap"
+msgid "CPU Waterfall Properties"
+msgstr "Eigenschappen van CPU Waterfall"
 
 #: ../panel-plugin/properties.cc:108
 msgid "_Close"
@@ -261,6 +261,6 @@ msgstr "Brandpunten: %.3g%%"
 msgid "SMT detected: N/A"
 msgstr "SMT bespeurd: N/B"
 
-#: ../panel-plugin/cpuheatmap.desktop.in.h:1
-msgid "CPU Heatmap"
-msgstr "CPU Heatmap"
+#: ../panel-plugin/cpuwaterfall.desktop.in.h:1
+msgid "CPU Waterfall"
+msgstr "CPU Waterfall"
